fix(test): truncate the guide translation memory as bytes, not as a String
aTruncatedMemoryFileIsIgnoredInsteadOfFailingTheRun halved the decoded
String and wrote it back as UTF-8. That splits UTF-16 at an arbitrary
index, so as soon as a surrogate pair (any emoji in the guide) sits at
the midpoint, writing the half back throws UnmappableCharacterException
and the test dies in its own setup without ever reaching the recovery
path it exists to check.

Whether that happened depended on the guide text, which is why adding
the AI-timeout documentation was enough to turn the test red on all
three runners while it had passed for months.

Halving the raw bytes is also the more faithful simulation: an
interrupted write leaves a byte prefix, not a valid String prefix.
loadMemory() catches the resulting MalformedInputException as an
IOException alongside the JSON parse failure, so the assertions still
exercise "unreadable memory is ignored".

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>